skins/elastic/styles/styles.less
/**
 * Roundcube webmail styles for the Elastic skin
 *
 * Copyright (c) 2017, The Roundcube Dev Team
 *
 * The contents are subject to the Creative Commons Attribution-ShareAlike
 * License. It is allowed to copy, distribute, transmit and to adapt the work
 * by keeping credits to the original autors in the README file.
 * See http://creativecommons.org/licenses/by-sa/3.0/ for details.
 */

@import (reference) "fontawesome.less";
@import (reference) "colors.less";

/*** Fonts ***/

@font-face {
  font-family: 'Icons';
  src: url("../fonts/fontawesome.woff2") format('woff2'),
       url("../fonts/fontawesome.woff") format('woff');
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-decoration: inherit;
  text-transform: none;
}

/* roboto-regular - greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'),
       url('../fonts/roboto-v15-greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/roboto-v15-greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* roboto-italic - greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic */
@font-face {
  font-family: 'Roboto';
  font-style: italic;
  font-weight: 400;
  src: local('Roboto Italic'), local('Roboto-Italic'),
       url('../fonts/roboto-v15-greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/roboto-v15-greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* roboto-700 - greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  src: local('Roboto Bold'), local('Roboto-Bold'),
       url('../fonts/roboto-v15-greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/roboto-v15-greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

/* roboto-700italic - greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic */
@font-face {
  font-family: 'Roboto';
  font-style: italic;
  font-weight: 700;
  src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'),
       url('../fonts/roboto-v15-greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/roboto-v15-greek-ext_greek_latin_cyrillic-ext_latin-ext_cyrillic-700italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}


/* Reset some Bootstrap style */

body, button, input, optgroup, select, textarea {
    font-family: Roboto, sans-serif;
}

button, input, select, textarea {
    line-height: initial;
}

@import "layout.less";


/*** Font-icons ***/

.font-icon-class {
    font-size: 1.25em;
    /*
        display: inline-block;
        FIXME: with inline-block we have some problems with icon alignment
    */
    display: block;
    float: left;
    margin: 0em 0.25rem 0em 0em;
    width: 1.18em;
    height: 1em;
    font-family: 'Icons';
    font-style: normal;
    font-weight: normal;
    text-decoration: inherit;
    text-align: center;
    speak: none;
    font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

@-webkit-keyframes fa-spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}
@keyframes fa-spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.animated-icon-class() {
    -webkit-animation: fa-spin 2s infinite linear;
    animation: fa-spin 2s infinite linear;
}


/*** Common UI elements ***/

.hidden,
.voice {
    display: none !important;
}

#rcmdraglayer {
    min-width: 260px;
    width: auto !important;
    width: 260px;
    background: @color-drag-layer-background;
    z-index: 250;
    color: @color-drag-layer;
    white-space: nowrap;
    opacity: 0.92;
}

.listbox .scroller {
    width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
}


#folder-selector {
    overflow-y: auto;

    li a.virtual {
        opacity: .2;
    }
}

#content .watermark {
    background: url(../images/watermark.jpg) center no-repeat;
    width: 100%;
    height: 100%;
}

.noselect {
    user-select: none;
    -moz-user-select: none;
    -khtml-user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
}


/*** Widgets ***/

@import "widgets/buttons.less";
@import "widgets/dialogs.less";
@import "widgets/taskmenu.less";
@import "widgets/messages.less";
@import "widgets/toolbar.less";
@import "widgets/searchbar.less";
@import "widgets/lists.less";
@import "widgets/forms.less";
@import "widgets/messagebody.less";
@import "widgets/googiespell.less";



/*** Login form ***/

.task-login #content {
    text-align: center;
    width: 100%;
    background: url(../images/watermark.jpg) center -20px no-repeat;
}

#login-form {
    margin: auto;
    width: 95%;
    max-width: 280px;

    /* Fixes input width and position in IE11 */
    .row {
        max-width: 280px;
        margin-right: 0;
        margin-left: 0;
    }
}


/*** Addressbook UI ***/

#contacts-table {
    .contact.readonly td {
        font-style: italic;
    }

    td.action {
        /* TODO */
        a {
            /* TODO */
        }
    }

    span.email {
        display: inline;
        color: #69939e; /* TODO */
        font-style: italic;
        margin-left: 0.5em;
    }
}

#contactpic {
    /* TODO: merge with imap-upload? */
    min-width: 112px;
    min-height: 112px;
    text-align: center;
    border-radius: 5px;
    overflow: hidden;

    img {
        max-width: 112px;
        max-height: 135px;
    }
}
#contactphoto {
 /* TODO */
    float: left;
    margin-right: 0.5em;
}
#contacthead { /* TODO */ }
.contactfieldgroup { /* TODO */ }

